# gnomeban

./: README.md  com.github.spidermonkdust.GNOMEBan.json  meson.build
data/: com.github.spidermonkdust.GNOMEBan.appdata.xml.in  com.github.spidermonkdust.GNOMEBan.desktop.in  com.github.spidermonkdust.GNOMEBan.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  gnomeban.gresource.xml  main.vala  meson.build  window.ui  window.vala
